Fix data loadingon Refresh, go to Home. Fix ADD_TASK action. Fix overflowing title on TaskCardDetailsModal

--- a/tribe-frontend-app/src/Login/Login.css
+++ b/tribe-frontend-app/src/Login/Login.css
@@ -5,6 +5,7 @@
 .Login-bg {
   margin: 12rem 0;
   width: 95%;
+  min-width: 50rem;
 }
 
 /* .Login-img-container {
