--- a/tribe-frontend-app/src/LoginForm/LoginForm.css
+++ b/tribe-frontend-app/src/LoginForm/LoginForm.css
@@ -1,6 +1,8 @@
 .LoginForm {
   text-align: left;
   padding: 0 5rem;
+  min-width: 30rem;
+  margin: auto;
 }
 
 
