--- a/tribe-frontend-app/src/TaskCard/TaskCard.css
+++ b/tribe-frontend-app/src/TaskCard/TaskCard.css
@@ -1,6 +1,5 @@
 .TaskCard{
     width: 100%;
-    height: 100%;
     padding: 2rem 3.5rem;
     margin-top: 7px;
     background-color: rgb(255, 255, 255);
@@ -73,7 +72,6 @@
     background-color: white;
     font-weight: 600;
 }
-
 
 .TaskCard-trade-btn {
     border-color: #7186c0;
